--- a/helix/config.toml
+++ b/helix/config.toml
@@ -47,7 +47,7 @@ tab = 'all'
 'tab' = ':buffer-next'
 
 [keys.insert]
-k = { j = "normal_mode" }
+j = { j = "normal_mode" }
 
 [keys.normal.'space']
 'backspace' = ':run-shell-command'
