--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,5 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-include challenger-deep.conf
-
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -26,7 +24,7 @@ bold_italic_font VictorMono Nerd Font Mono Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -358,12 +356,12 @@ detect_urls yes
 #: URLs under the mouse cursor. By default, all characters that are
 #: legal in URLs are allowed.
 
-# show_hyperlink_targets no
+show_hyperlink_targets yes
 
 #: When the mouse hovers over a terminal hyperlink, show the actual
 #: URL that will be activated when the hyperlink is clicked.
 
-copy_on_select clipboard
+# copy_on_select clipboard
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
@@ -424,12 +422,12 @@ click_interval -1.0
 #: clicks (in seconds). Negative numbers will use the system default
 #: instead, if available, or fallback to 0.5.
 
-# focus_follows_mouse no
+focus_follows_mouse yes
 
 #: Set the active window to the window under the mouse when moving the
 #: mouse around.
 
-pointer_shape_when_grabbed arrow
+pointer_shape_when_grabbed hand
 
 #: The shape of the mouse pointer when the program running in the
 #: terminal grabs the mouse. Valid values are: arrow, beam and hand.
@@ -611,7 +609,7 @@ pointer_shape_when_dragging beam
 #: refresh rate. Also, to minimize latency when there is pending input
 #: to be processed, this option is ignored.
 
-# input_delay 3
+input_delay 2
 
 #: Delay before input from the program running in the terminal is
 #: processed (in milliseconds). Note that decreasing it will increase
@@ -632,17 +630,17 @@ pointer_shape_when_dragging beam
 
 #: Terminal bell {{{
 
-enable_audio_bell yes
+enable_audio_bell nok
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
 
-# visual_bell_duration 0.0
+visual_bell_duration 0.1
 
 #: The visual bell duration (in seconds). Flash the screen when a bell
 #: occurs for the specified number of seconds. Set to zero to disable.
 
-# visual_bell_color none
+visual_bell_color red
 
 #: The color used by visual bell. Set to none will fall back to
 #: selection background color. If you feel that the visual bell is too
@@ -730,7 +728,7 @@ bell_on_tab "🔔 "
 #: horizontal sides. Three values set top, horizontal and bottom. Four
 #: values set top, right, bottom and left.
 
-# single_window_margin_width -1
+single_window_margin_width 0
 
 #: The window margin to use when only a single window is visible (in
 #: pts). Negative values will cause the value of window_margin_width
@@ -768,7 +766,7 @@ bell_on_tab "🔔 "
 #: The color for the border of inactive windows in which a bell has
 #: occurred.
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 0.8
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -802,14 +800,14 @@ bell_on_tab "🔔 "
 #: The amount the logo should be faded into the background. With zero
 #: being fully faded and one being fully opaque.
 
-# resize_debounce_time 0.1
+resize_debounce_time 0.05
 
 #: The time to wait before redrawing the screen when a resize event is
 #: received (in seconds). On platforms such as macOS, where the
 #: operating system sends events corresponding to the start and end of
 #: a resize, this number is ignored.
 
-# resize_draw_strategy static
+resize_draw_strategy cells
 
 #: Choose how kitty draws a window while a resize is in progress. A
 #: value of static means draw the current window contents, mostly
@@ -833,7 +831,7 @@ bell_on_tab "🔔 "
 #: insensitive, from the set [0-9A-Z]. Specify your preference as a
 #: string of characters.
 
-# confirm_os_window_close -1
+confirm_os_window_close -1
 
 #: Ask for confirmation when closing an OS window or a tab with at
 #: least this number of kitty windows in it by window manager (e.g.
@@ -1012,6 +1010,8 @@ tab_title_template "{index}:{num_windows} {bell_symbol}{activity_symbol} {title}
 #: }}}
 
 #: Color scheme {{{
+#
+include dracula.conf
 
 # foreground #dddddd
 # background #000000
@@ -1075,7 +1075,7 @@ background_opacity 0.8
 #: multiplicative with background_tint, it can be used to lighten the
 #: tint over the window gaps for a *separated* look.
 
-# dim_opacity 0.75
+dim_opacity 0.75
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
@@ -1167,7 +1167,7 @@ background_opacity 0.8
 
 #: Advanced {{{
 
-# shell .
+shell .
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -1175,7 +1175,7 @@ background_opacity 0.8
 #: --login and --interactive to ensure that the shell starts in
 #: interactive mode and reads its startup rc files.
 
-editor /opt/homebrew/bin/nvim
+editor .
 
 #: The terminal based text editor (such as vim or nano) to use when
 #: editing the kitty config file or similar tasks.
@@ -1233,7 +1233,7 @@ editor /opt/homebrew/bin/nvim
 
 #: Relative paths are resolved from the kitty configuration directory.
 
-# allow_remote_control no
+allow_remote_control no
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
@@ -1376,7 +1376,7 @@ allow_hyperlinks yes
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-# shell_integration enabled
+shell_integration enabled
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
@@ -1528,7 +1528,7 @@ macos_thicken_font 0.32
 #: mouse cursor invisible on dual GPU machines. Changing this option
 #: by reloading the config is not supported.
 
-macos_colorspace default
+# macos_colorspace default
 
 #: The colorspace in which to interpret terminal colors. The default
 #: of srgb will cause colors to match those seen in web browsers. The
@@ -1539,7 +1539,7 @@ macos_colorspace default
 #: configuration will change this value only for newly created OS
 #: windows.
 
-# linux_display_server auto
+linux_display_server wayland
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
@@ -1638,14 +1638,14 @@ action_alias launch_tab launch --type=tab --cwd=current
 #: create mappings to launch a new tab in the current working
 #: directory without duplication::
 
-map f1 launch_tab nvim
+map f2 launch_tab nvim
 #:     map f2 launch_tab emacs
-map f2 launch --cwd=current
-map f3 launch --cwd=current --type=tab
+map f3 launch --cwd=current
+map f4 launch_tab
 
 #: Similarly, to alias kitten invocation::
 
-#:     action_alias hints kitten hints --hints-offset=0
+#: action_alias hints kitten hints --hints-offset=0
 
 # kitten_alias
 
@@ -2291,3 +2291,4 @@ map f3 launch --cwd=current --type=tab
 #: }}}
 
 #: }}}
+
