--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,4 +1,4 @@
-theme = 'no-bg'
+theme = 'rose_pine'
 
 [editor]
 shell = ['zsh', '-c']
@@ -33,10 +33,9 @@ select = 'underline'
 
 [editor.file-picker]
 hidden = false
-ignore = false
-git-global = false
+ignore = true
+git-global = true
 git-ignore = true
-
 
 [editor.auto-pairs]
 '(' = ')'
@@ -50,7 +49,7 @@ git-ignore = true
 [editor.whitespace.render]
 nbsp = 'all'
 tab = 'all'
-space = 'none'
+space = 'all'
 
 [editor.whitespace.characters]
 space = '·'
