--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,12 +8,12 @@ app-id=foot # globally set wayland app-id. Default values are "foot" and "footcl
 title=foot
 locked-title=no
 
-font=Monaspace Argon:size=12
+font=MonaspiceAr Nerd Font Mono:size=12
 # font-bold=Monaspace Argon Bold
 # font-italic=Monaspace Argon Italic
 # font-bold-italic=Monaspace Argon Bold-Italic
 # font-size-adjustment=0.5
-line-height=16
+line-height=17
 # letter-spacing=0
 # horizontal-letter-offset=0
 # vertical-letter-offset=0
@@ -25,7 +25,7 @@ dpi-aware=yes
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
-pad=2x2                             # optionally append 'center'
+pad=8x8                             # optionally append 'center'
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
@@ -75,7 +75,7 @@ hide-when-typing=yes
 # long-press-delay=400
 
 [colors]
-alpha=0.8
+alpha=0.5
 # flash=7f7f00
 # flash-alpha=0.5
 
