--- a/gammastep/gammastep.conf
+++ b/gammastep/gammastep.conf
@@ -1,38 +1,17 @@
-; Global settings
 [general]
-; Set the day and night screen temperatures
-temp-day=5500
-temp-night=1200
+temp-day=6500
+temp-night=1000
+gamma-night=1.2:0.1:0.1
 
-; Disable the smooth fade between temperatures when Redshift starts and stops.
-; 0 will cause an immediate change between screen temperatures.
-; 1 will gradually apply the new screen temperature over a couple of seconds.
 fade=1
 
-; Solar elevation thresholds.
-; By default, Redshift will use the current elevation of the sun to determine
-; whether it is daytime, night or in transition (dawn/dusk). When the sun is
-; above the degrees specified with elevation-high it is considered daytime and
-; below elevation-low it is considered night.
-elevation-high=8
-elevation-low=-8
+elevation-high=5
+elevation-low=-30
 
-; Set the location-provider: 'geoclue2', 'manual'.
-; The location provider settings are in a different section.
 location-provider=manual
 
-; Set the adjustment-method: 'randr', 'vidmode', 'drm', 'wayland'.
-; 'randr' is the preferred X11 method, 'vidmode' is an older API
-; that works in some cases when 'randr' does not.
-; The adjustment method settings are in a different section.
 adjustment-method=wayland
 
-; Configuration of the location-provider:
-; type 'gammastep -l PROVIDER:help' to see the settings.
-; ex: 'gammastep -l manual:help'
-; Keep in mind that longitudes west of Greenwich (e.g. the Americas)
-; are negative numbers.
 [manual]
 lat=41.2
 lon=-74.6
-
