Update for NixOS

--- a/hypr/hyprKeys.conf
+++ b/hypr/hyprKeys.conf
@@ -1,5 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $s = SUPER
+$menu = dmenu_path | wmenu -bi -l 10 -p 'dmenu_path | wmenu' | xargs hyprctl dispatch exec --
 
 # Main Laptop Funtions/Special Keys
 #bindl=,switch:Lid Switch,exec,swaylock
@@ -15,8 +16,8 @@ bindle=, XF86KbdBrightnessUp, exec, light -s sysfs/leds/smc::kbd_backlight -A 1
 bindle=, XF86KbdBrightnessDown, exec, light -s sysfs/leds/smc::kbd_backlight -U 3
 
 ## Volume, limited to 100% (-l 1.0)
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 1%+
-bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 2%+
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
 bindle=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 ## Media Controls
@@ -28,45 +29,60 @@ bindl=, XF86AudioPrev, exec, playerctl previous
 
 # Programs
 bind = $s, return, exec, kitty
-bind = $s, Q, killactive, 
-bind = $s, M, exit, 
-bind = $s, Backspace, exec, pkill rofi || rofi -theme Arc-Dark -show drun -show-icons
-bind = $s, B, exec, rofi -theme Arc-Dark -show filebrowser -show-icons
-bind = $s ALT, C, exec, kitty --title 'Config Files' nvim ~/.config/
-bind = $s ALT, N, exec, kitty --title 'Neovim Config' nvim ~/.config/nvim/
-bind = $s ALT, X, exec, kitty --title 'Helix Config' nvim ~/.config/helix/
-bind = $s ALT, H, exec, kitty --title 'Hypr Config' nvim ~/.config/hypr/
-bind = $s ALT, B, exec, kitty --title 'Waybar Config' nvim ~/.config/waybar/
-bind = $s ALT, O, exec, kitty --title 'NixOS Configuration' sudo nvim /etc/nixos/
-
-# Focus
-bind = $s, Tab, cyclenext,
-bind = $s, Tab, bringactivetotop,
-bind = $s, H, movefocus, l
-bind = $s, L, movefocus, r
-bind = $s, J, movefocus, d
-bind = $s, K, movefocus, u
+bind = $s, Q, killactive,
+bind = $s SHIFT, Q, exit, 
+bind = $s, C, exec, kitty --title 'Config Files' hx ~/.config/
+bind = $s, W, exec, $menu
 
 # Layout
 bind = $s, P, pseudo, # dwindle
 bind = $s, S, togglesplit, # dwindle
-bind = $s, F, togglefloating,
+bind = $s, F, fullscreen,
+bind = $s CTRL, F, togglefloating,
+
+bind = $s, R, togglespecialworkspace, magic
+bind = $s SHIFT, R, movetoworkspace, special:magic
+
+
+# Focus
+bind = $s, Tab, cyclenext,
+bind = $s, Tab, bringactivetotop,
+bind = $s, N, movefocus, l
+bind = $s, I, movefocus, r
+bind = $s, O, movefocus, u
+bind = $s, E, movefocus, d
+bind = $s, left, movefocus, l
+bind = $s, right, movefocus, r
+bind = $s, up, movefocus, u
+bind = $s, down, movefocus, d
 
 # Window Movements
-bind =ALT, A, movewindow, l
-bind =ALT, D, movewindow, r
-bind =ALT, S, movewindow, d
-bind =ALT, W, movewindow, u
+bind = $s CTRL, N, movewindow, l
+bind = $s CTRL, I, movewindow, r
+bind = $s CTRL, O, movewindow, u
+bind = $s CTRL, E, movewindow, d
+bind = $s CTRL, left,  movewindow, l
+bind = $s CTRL, right, movewindow, r
+bind = $s CTRL, up,    movewindow, u
+bind = $s CTRL, down,  movewindow, d
 
 # Window Resize
-binde=ALT, L, resizeactive, 24 0
-binde=ALT, H, resizeactive, -24 0
-binde=ALT, K, resizeactive, 0 -24
-binde=ALT, J, resizeactive, 0 24
+binde= $s SHIFT, N, resizeactive, -24 0
+binde= $s SHIFT, I, resizeactive, 24 0
+binde= $s SHIFT, O, resizeactive, 0 -24
+binde= $s SHIFT, E, resizeactive, 0 24
+binde= $s SHIFT, left,  resizeactive, -24 0
+binde= $s SHIFT, right, resizeactive, 24 0
+binde= $s SHIFT, up,    resizeactive, 0 -24
+binde= $s SHIFT, down,  resizeactive, 0 24
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $s, mouse:272, movewindow
 bindm = $s, mouse:273, resizewindow
+
+# Scroll through existing workspaces with mainMod + scroll
+bind = $s, mouse_down, workspace, e+1
+bind = $s, mouse_up, workspace, e-1
 
 # Switch workspaces with mainMod + [0-9]
 bind = $s, 1, workspace, 1
@@ -79,8 +95,8 @@ bind = $s, 7, workspace, 7
 bind = $s, 8, workspace, 8
 bind = $s, 9, workspace, 9
 bind = $s, 0, workspace, 10
-bind = $s, left,  workspace, e-1
-bind = $s, right, workspace, e+1
+# bind = $s, left,  workspace, e-1
+# bind = $s, right, workspace, e+1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $s SHIFT, 1, movetoworkspace, 1
@@ -93,10 +109,5 @@ bind = $s SHIFT, 7, movetoworkspace, 7
 bind = $s SHIFT, 8, movetoworkspace, 8
 bind = $s SHIFT, 9, movetoworkspace, 9
 bind = $s SHIFT, 0, movetoworkspace, 10
-bind = $s SHIFT, right, movetoworkspace, e+1
-bind = $s SHIFT, left,  movetoworkspace, e-1
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $s, mouse_down, workspace, e+1
-bind = $s, mouse_up, workspace, e-1
-
+# bind = $s SHIFT, right, movetoworkspace, e+1
+# bind = $s SHIFT, left,  movetoworkspace, e-1
