--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,5 @@
-shell /usr/bin/fish
+linux_display_server wayland
+shell .
 editor .
 shell_integration enabled
 
@@ -12,7 +13,7 @@ font_features MonaspiceArNF-Bold         +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss
 font_features MonaspiceArNF-MediumItalic +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +calt +dlig 
 font_features MonaspiceArNF-BoldItalic   +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +calt +dlig 
 
-font_size 12.0
+font_size 10
 disable_ligatures cursor
 #macos_thicken_font 0.32
 
@@ -38,12 +39,14 @@ enable_audio_bell nok
 visual_bell_duration 0.1
 # visual_bell_color red
 bell_on_tab "🔔 "
-single_window_margin_width 0
 
 resize_debounce_time 0.05
 resize_draw_strategy cells
 
 confirm_os_window_close -1
+
+single_window_margin_width 0
+window_padding_width 18 24 10
 
 tab_bar_edge top
 tab_bar_style powerline
@@ -55,13 +58,47 @@ tab_powerline_style slanted
 tab_activity_symbol 😈
 tab_title_max_length 0
 tab_title_template "{index}:{num_windows} {bell_symbol}{activity_symbol} {title}"
+
 allow_remote_control no
 
-action_alias launch_tab launch --type=tab --cwd=current
-map f2 launch_tab hx
-map f3 launch lf
 
-linux_display_server wayland
+# LAYOUT
+enabled_layouts splits, grid
+action_alias launch_tab launch --type=tab --cwd=current
+
+
+# Create a new window splitting the space used by the existing one so that
+# the two windows are placed side by side if the existing window is wide or
+# one above the other if the existing window is tall.
+map f5 launch --location=split
+
+# Rotate the current split, changing its split axis from vertical to
+# horizontal or vice versa
+map shift+f5 layout_action rotate
+
+map f6 launch_tab
+map f7 launch hx
+map f8 launch lf
+
+# Move the active window in the indicated direction
+map shift+up move_window up
+map shift+left move_window left
+map shift+right move_window right
+map shift+down move_window down
+
+# Move the active window to the indicated screen edge
+map ctrl+shift+up layout_action move_to_screen_edge top
+map ctrl+shift+left layout_action move_to_screen_edge left
+map ctrl+shift+right layout_action move_to_screen_edge right
+map ctrl+shift+down layout_action move_to_screen_edge bottom
+
+# Switch focus to the neighboring window in the indicated direction
+map ctrl+left neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+up neighboring_window up
+map ctrl+down neighboring_window down
+
+
 
 
 # BEGIN_KITTY_THEME
@@ -70,6 +107,4 @@ include current-theme.conf
 # END_KITTY_THEME
 
 background_opacity 1
-background #000000
-inactive_text_alpha 0.8
-dim_opacity 0.75
+background #06060A
