--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,32 +1,18 @@
-env = GDK_BACKEND,wayland
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-env = SDL_VIDEODRIVER,wayland
-env = CLUTTER_BACKEND,wayland
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,wayland
-env = GTK_THEME,kanagawa
-
-monitor=,preferred,auto,auto
+# monitor=,preferred,auto,auto
 
 monitors {
-	monitor=desc:AOC Q27G2G4 0x000018D9, 2560x1440@120, 0x0, 1,bitdepth,10
-	monitor=desc:Dell Inc. DELL U2415 CFV9N8AK22LL, preferred, 2560x0, 1, transform, 3
-	monitor=eDP-1, 2560x1600, 3760x720, 1.5
+	monitor=desc:AOC Q27G2G4 0x000018D9, 2560x1440@120Hz, 1200x240, 1.33, bitdepth,10
+	monitor=desc:Dell Inc. DELL U2415 CFV9N8AK22LL, preferred, 0x0, 1, transform, 1
+	monitor=eDP-1, disable, 2560x1600, 960x1152, 2
 }
 
-# COLOR
-source = $HOME/.config/hypr/hyprDracula.conf
+# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-start {
-	source = $HOME/.config/hypr/hyprStart.conf
-	exec-once = $HOME/.config/hypr/hyprPostStart.sh
-}
+exec-once = dash /home/c/user-logged-in-wayland.sh
 
-env = XCURSOR_SIZE, 48
+# Some default env vars.
+env = XCURSOR_SIZE,96
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
 	kb_layout = us
 	kb_variant =
@@ -39,28 +25,56 @@ input {
 	touchpad {
 		natural_scroll = yes
 	}
+	#43a49b0 {
+	#	natural_scroll = yes
+	#}
 
 	sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+#COLORS
+source = ./themes/rose-pine.conf
+
 general {
-	gaps_in = 2
-	gaps_out = 0
-	border_size = 2
+
+	gaps_in = 4
+	gaps_out = 8
+	border_size = 1
+
+	col.inactive_border = $muted
+	col.active_border = $love $rose $foam 270deg
 
 	layout = dwindle
+
+	cursor_inactive_timeout = 15
+	resize_on_border = true
+	allow_tearing = false
 }
 
 decoration {
-	rounding = 5
-	blur = yes
-	blur_size = 3
-	blur_passes = 1
-	blur_new_optimizations = on
+
+	rounding = 8
+
+	blur {
+		enabled = false
+		size = 3
+		passes = 1
+	}
+
+	drop_shadow = true
+	shadow_range = 10
+	shadow_render_power = 3
+	col.shadow = $highlightMed
+	col.shadow_inactive = rgba(00000099)
+
+	dim_inactive = true
+	dim_strength = 0.2
 }
 
 animations {
 	enabled = yes
+
+	# Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
 	bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
@@ -73,13 +87,16 @@ animations {
 }
 
 dwindle {
+	# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 	pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
 	preserve_split = yes # you probably want this
+	no_gaps_when_only = 2
 }
 
 master {
 	# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 	new_is_master = true
+	no_gaps_when_only = 2
 }
 
 gestures {
@@ -87,6 +104,19 @@ gestures {
 	workspace_swipe = on
 }
 
+misc {
+	# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+	disable_hyprland_logo = true
+	background_color = 0x000000
+	new_window_takes_over_fullscreen = 2
+}
+
+binds {
+	workspace_back_and_forth = true
+}
+
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 floatPIP = {
 	windowrulev2 = float,title:^(Picture-in-Picture)$
 	windowrulev2 = noblur,title:^(Picture-in-Picture)$
@@ -97,5 +127,5 @@ floatPIP = {
 
 windowrulev2 = workspace 10,class:^(Spotify)$
 
-source = $HOME/.config/hypr/hyprKeys.conf
-
+# KEYS
+source = ./hyprKeys.conf
