Add dev-env Nixos module

--- a/hypr/hyprKeys.conf
+++ b/hypr/hyprKeys.conf
@@ -31,8 +31,9 @@ bindl=, XF86AudioPrev, exec, playerctl previous
 bind = $s, return, exec, kitty
 bind = $s, Q, killactive,
 bind = $s SHIFT, Q, exit, 
-bind = $s, C, exec, kitty --title 'Config Files' hx ~/.config/
-bind = $s, W, exec, $menu
+bind = $s, C, exec, kitty --title 'Config Files' sudo hx ~/.config/
+bind = $s, D, exec, $menu
+bind = $s, R, exec, kanshictl reload
 
 # Layout
 bind = $s, P, pseudo, # dwindle
@@ -40,9 +41,8 @@ bind = $s, S, togglesplit, # dwindle
 bind = $s, F, fullscreen,
 bind = $s CTRL, F, togglefloating,
 
-bind = $s, R, togglespecialworkspace, magic
-bind = $s SHIFT, R, movetoworkspace, special:magic
-
+bind = $s, H, togglespecialworkspace, magic
+bind = $s CTRL, H, movetoworkspace, special:magic
 
 # Focus
 bind = $s, Tab, cyclenext,
@@ -99,15 +99,15 @@ bind = $s, 0, workspace, 10
 # bind = $s, right, workspace, e+1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $s SHIFT, 1, movetoworkspace, 1
-bind = $s SHIFT, 2, movetoworkspace, 2
-bind = $s SHIFT, 3, movetoworkspace, 3
-bind = $s SHIFT, 4, movetoworkspace, 4
-bind = $s SHIFT, 5, movetoworkspace, 5
-bind = $s SHIFT, 6, movetoworkspace, 6
-bind = $s SHIFT, 7, movetoworkspace, 7
-bind = $s SHIFT, 8, movetoworkspace, 8
-bind = $s SHIFT, 9, movetoworkspace, 9
-bind = $s SHIFT, 0, movetoworkspace, 10
+bind = $s CTRL, 1, movetoworkspace, 1
+bind = $s CTRL, 2, movetoworkspace, 2
+bind = $s CTRL, 3, movetoworkspace, 3
+bind = $s CTRL, 4, movetoworkspace, 4
+bind = $s CTRL, 5, movetoworkspace, 5
+bind = $s CTRL, 6, movetoworkspace, 6
+bind = $s CTRL, 7, movetoworkspace, 7
+bind = $s CTRL, 8, movetoworkspace, 8
+bind = $s CTRL, 9, movetoworkspace, 9
+bind = $s CTRL, 0, movetoworkspace, 10
 # bind = $s SHIFT, right, movetoworkspace, e+1
 # bind = $s SHIFT, left,  movetoworkspace, e-1
