--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,12 +1,11 @@
 # monitor=,preferred,auto,auto
 
-monitors {
-	monitor=desc:AOC Q27G2G4 0x000018D9, 2560x1440@120Hz, 1200x240, 1.33, bitdepth,10
-	monitor=desc:Dell Inc. DELL U2415 CFV9N8AK22LL, preferred, 0x0, 1, transform, 1
-	monitor=eDP-1, disable, 2560x1600, 960x1152, 2
-}
+#monitors {
+	#monitor=desc:AOC Q27G2G4 0x000018D9, 2560x1440@120Hz, 1200x240, 1.33, bitdepth,10
+	#monitor=desc:Dell Inc. DELL U2415 CFV9N8AK22LL, preferred, 0x0, 1, transform, 1
+	#monitor=eDP-1, disable, 2560x1600, 960x1152, 2
+#}
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 exec-once = dash /home/c/user-logged-in-wayland.sh
 
@@ -39,7 +38,7 @@ general {
 
 	gaps_in = 4
 	gaps_out = 8
-	border_size = 1
+	border_size = 0
 
 	col.inactive_border = $muted
 	col.active_border = $love $rose $foam 270deg
@@ -57,33 +56,37 @@ decoration {
 
 	blur {
 		enabled = false
-		size = 3
+		size = 1
 		passes = 1
+		xray = false
 	}
 
-	drop_shadow = true
+	drop_shadow = false
 	shadow_range = 10
 	shadow_render_power = 3
 	col.shadow = $highlightMed
 	col.shadow_inactive = rgba(00000099)
 
-	dim_inactive = true
-	dim_strength = 0.2
+	dim_inactive = false
+	dim_strength = 0.25
 }
 
 animations {
 	enabled = yes
+	bezier = swoop-in, 0.25, 0.8, 0, 1
+	bezier = slip, 0, 0.6, 0.3, 1
+	bezier = easeInOutSine, 0.445, 0.05, 0.55, 0.95
+	#bezier = easeInQuad, 0.55, 0.085, 0.68, 0.53
+	#bezier = easeInExpo, 0.95, 0.05, 0.795, 0.035
+	bezier = linear, 0, 0, 1, 1
 
-	# Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-	bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-	animation = windows, 1, 7, myBezier
-	animation = windowsOut, 1, 7, default, popin 80%
-	animation = border, 1, 10, default
-	animation = borderangle, 1, 8, default
-	animation = fade, 1, 7, default
-	animation = workspaces, 1, 6, default
+	animation = windows,     1, 3, swoop-in
+	animation = windowsOut,  0,
+	animation = border,      0,
+	animation = borderangle, 0, 60, linear, loop
+	animation = fade,        0, 3, default
+	animation = workspaces,  1, 3, slip, slidevert
+	animation = specialWorkspace, 1, 3, easeInOutSine, fade
 }
 
 dwindle {
@@ -110,6 +113,7 @@ misc {
 	disable_hyprland_logo = true
 	background_color = 0x000000
 	new_window_takes_over_fullscreen = 2
+	vfr = true
 }
 
 binds {
@@ -125,7 +129,8 @@ floatPIP = {
 	windowrulev2 = pin,nomaximizerequest,title:^(Picture-in-Picture)$
 }
 
-windowrulev2 = workspace 10,class:^(Spotify)$
+windowrulev2 = workspace 10,title:^(Spotify Free)$
+
 
 # KEYS
 source = ./hyprKeys.conf
