Refactor Keyd, disable keyd.nix, correct monaspace

--- a/hypr/hyprKeys.conf
+++ b/hypr/hyprKeys.conf
@@ -31,7 +31,7 @@ bindl=, XF86AudioPrev, exec, playerctl previous
 bind = $s, return, exec, kitty
 bind = $s, Q, killactive,
 bind = $s SHIFT, Q, exit, 
-bind = $s, C, exec, kitty --title 'Config Files' sudo hx ~/.config/
+bind = $s, C, exec, kitty --title 'Config Files' sudo hx --working-dir ~/.config/
 bind = $s, D, exec, $menu
 bind = $s, R, exec, kanshictl reload
 
