--- a/keyd/dierya.conf
+++ b/keyd/dierya.conf
@@ -1,7 +1,6 @@
 [ids]
 
-1a2c:95f6 # mkbox 70%
-31e3:1102 # wooting one
+0c45:766b # dierya 60%
 
 
 include shared
@@ -13,5 +12,14 @@ include canary
 
 leftalt = layer(meta)
 leftmeta = layer(alt)
+rightshift = dot
 
 include qwerty
+
+
+[shift]
+
+rightshift = ">"
+
+
+
