--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,17 +3,19 @@ shell .
 editor .
 shell_integration enabled
 
-font_family      MonaspiceAr Nerd Font Mono Regular
-bold_font        MonaspiceAr Nerd Font Mono Bold
-italic_font      MonaspiceAr Nerd Font Mono Medium Italic
-bold_italic_font MonaspiceAr Nerd Font Mono Bold Italic
+font_family      MonaspiceAr Nerd Font Mono
+bold_font        MonaspiceAr NFM Bold
+italic_font      MonaspiceAr NFM Italic
+bold_italic_font MonaspiceAr NFM Bold Italic
 
-font_features MonaspiceArNF-Regular      +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +calt +dlig 
-font_features MonaspiceArNF-Bold         +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +calt +dlig 
-font_features MonaspiceArNF-MediumItalic +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +calt +dlig 
-font_features MonaspiceArNF-BoldItalic   +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +calt +dlig 
+# kitty +list-fonts --psnames 
+font_features MonaspiceArNFM-Regular    +calt +liga +dlig +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+font_features MonaspiceArNFM-Bold       +calt +liga +dlig +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+font_features MonaspiceArNFM-Italic     +calt +liga +dlig +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
+font_features MonaspiceArNFM-BoldItalic +calt +liga +dlig +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08
 
-font_size 10
+font_size 12
+modify_font cell_height 164%
 disable_ligatures cursor
 #macos_thicken_font 0.32
 
@@ -99,12 +101,10 @@ map ctrl+up neighboring_window up
 map ctrl+down neighboring_window down
 
 
-
-
 # BEGIN_KITTY_THEME
-# Rosé Pine
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
 
 background_opacity 1
-background #06060A
+background #000000
