--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,10 +8,7 @@ app-id=foot # globally set wayland app-id. Default values are "foot" and "footcl
 title=foot
 locked-title=no
 
-font=MonaspiceArNerdFontMono-Regular:size=14
-# font-bold=Monaspace Argon Bold
-# font-italic=Monaspace Argon Italic
-# font-bold-italic=Monaspace Argon Bold-Italic
+font=MonaspiceAr Nerd Font Mono:weight=regular:size=11:fontfeatures=calt,ss01,ss02,ss03,ss04,ss05,ss06,ss07,ss08
 # font-size-adjustment=0.5
 line-height=18
 # letter-spacing=0
