--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,7 +38,7 @@ general {
 
 	gaps_in = 4
 	gaps_out = 8
-	border_size = 0
+	border_size = 2
 
 	col.inactive_border = $muted
 	col.active_border = $love $rose $foam 270deg
@@ -52,7 +52,7 @@ general {
 
 decoration {
 
-	rounding = 8
+	rounding = 16
 
 	blur {
 		enabled = false
@@ -85,7 +85,7 @@ animations {
 	animation = border,      0,
 	animation = borderangle, 0, 60, linear, loop
 	animation = fade,        0, 3, default
-	animation = workspaces,  1, 3, slip, slidevert
+	animation = workspaces,  1, 3, swoop-in, slidevert
 	animation = specialWorkspace, 1, 3, easeInOutSine, fade
 }
 
