Continue customizing Hypr, tune keyd, swith to MonaspaceNe

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,26 +8,19 @@ app-id=foot # globally set wayland app-id. Default values are "foot" and "footcl
 title=foot
 locked-title=no
 
-font=MonaspiceAr Nerd Font Mono:weight=regular:size=11:fontfeatures=calt,ss01,ss02,ss03,ss04,ss05,ss06,ss07,ss08
-# font-size-adjustment=0.5
-line-height=18
-# letter-spacing=0
-# horizontal-letter-offset=0
-# vertical-letter-offset=0
-# underline-offset=<font metrics>
-# underline-thickness=<font underline thickness>
-# box-drawings-uses-font-glyphs=no
+font=MonaspiceNe Nerd Font Mono:weight=regular:size=11:fontfeatures=calt,liga,dlig,ss01,ss02,ss03,ss04,ss05,ss06,ss07,ss08
+font-bold=MonaspiceNe Nerd Font Mono:weight=bold:size=11:fontfeatures=calt,liga,dlig,ss01,ss02,ss03,ss04,ss05,ss06,ss07,ss08
+font-italic=MonaspiceRn Nerd Font Mono:weight=regular:slant=italic:size=11:fontfeatures=calt,liga,dlig,ss01,ss02,ss03,ss04,ss05,ss06,ss07,ss08
+font-bold-italic=MonaspiceRn Nerd Font Mono:weight=bold:slant=italic:size=11:fontfeatures=calt,liga,dlig,ss01,ss02,ss03,ss04,ss05,ss06,ss07,ss08
+line-height=21
+box-drawings-uses-font-glyphs=no
 dpi-aware=yes
 
-# initial-window-size-pixels=700x500  # Or,
-# initial-window-size-chars=<COLSxROWS>
-# initial-window-mode=windowed
 pad=24x18                             # optionally append 'center'
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
-# bold-text-in-bright=no
 # word-delimiters=,│`|:"'()[]{}<>
 # selection-target=primary
 # workers=<number of logical CPUs>
@@ -51,7 +44,7 @@ hide-when-typing=yes
 [colors]
 alpha=1
 # flash=7f7f00
-# flash-alpha=0.5
+flash-alpha=0.5
 
 # Rose-Piné
 [cursor]
