--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,10 +7,11 @@
 #}
 
 
-exec-once = dash /home/c/user-logged-in-wayland.sh
+exec-once = /home/c/user-logged-in-wayland.sh
 
 # Some default env vars.
 env = XCURSOR_SIZE,96
+envd = XCURSOR_SIZE,96
 
 input {
 	kb_layout = us
@@ -22,7 +23,12 @@ input {
 	follow_mouse = 1
 
 	touchpad {
-		natural_scroll = yes
+		natural_scroll = true
+		disable_while_typing = true
+		clickfinger_behavior = true
+		tap-to-click = true
+		tap-and-drag = true
+		drag_lock = true
 	}
 	#43a49b0 {
 	#	natural_scroll = yes
@@ -30,6 +36,14 @@ input {
 
 	sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
+
+gestures {
+	# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	workspace_swipe = true
+	workspace_swipe_invert = true
+
+}
+
 
 #COLORS
 source = ./themes/rose-pine.conf
@@ -52,7 +66,7 @@ general {
 
 decoration {
 
-	rounding = 16
+	rounding = 12
 
 	blur {
 		enabled = false
@@ -76,8 +90,8 @@ animations {
 	bezier = swoop-in, 0.25, 0.8, 0, 1
 	bezier = slip, 0, 0.6, 0.3, 1
 	bezier = easeInOutSine, 0.445, 0.05, 0.55, 0.95
-	#bezier = easeInQuad, 0.55, 0.085, 0.68, 0.53
-	#bezier = easeInExpo, 0.95, 0.05, 0.795, 0.035
+	bezier = easeInQuad, 0.55, 0.085, 0.68, 0.53
+	bezier = easeInExpo, 0.95, 0.05, 0.795, 0.035
 	bezier = linear, 0, 0, 1, 1
 
 	animation = windows,     1, 3, swoop-in
@@ -85,7 +99,7 @@ animations {
 	animation = border,      0,
 	animation = borderangle, 0, 60, linear, loop
 	animation = fade,        0, 3, default
-	animation = workspaces,  1, 3, swoop-in, slidevert
+	animation = workspaces,  1, 2, easeInExpo, slidevert
 	animation = specialWorkspace, 1, 3, easeInOutSine, fade
 }
 
@@ -102,11 +116,6 @@ master {
 	no_gaps_when_only = 2
 }
 
-gestures {
-	# See https://wiki.hyprland.org/Configuring/Variables/ for more
-	workspace_swipe = on
-}
-
 misc {
 	# See https://wiki.hyprland.org/Configuring/Variables/ for more
 	force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
@@ -114,6 +123,9 @@ misc {
 	background_color = 0x000000
 	new_window_takes_over_fullscreen = 2
 	vfr = true
+	vrr = 1
+	mouse_move_enables_dpms = true
+	key_press_enables_dpms = true
 }
 
 binds {
